Prevent orange flickering on first load + reduce colorize of blur (#144)

--- a/_sass/base/_page.scss
+++ b/_sass/base/_page.scss
@@ -72,7 +72,7 @@ body.custom-image {
   right: 0;
   display: block;
   height: 800px;
-  background-color: _palette(bg);
+  background-color: _palette(bg-header);
   z-index: -10;
 }
 
